...
      "comment" : "Title of the DiskMeerkat status window.",
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "DiskMeerkat Status"
          }
        },
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "DiskMeerkat 状态"
...
